# py_LIBFLNL

./: CMakeLists.txt  FLNL.cbp  README.md
example/: Client.cbp  Client.depend  Client.layout  Serveur.cbp  Serveur.depend  Serveur.layout  main.cpp  mainClient.cpp
python_client/: README.md  client.py  pipeline.py
src/: FLNL.h  baseSocket.cpp  client.cpp  main.cpp  mainClient.cpp  server.cpp
